--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,71 +1,99 @@
-.form-wrapper{
-    color:grey;
-    width: 300px;
-    height:280px;
-    background-color: white;
-    padding:1rem;
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+.form-container {
+  width: 600px;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.form-wrapper h4{
-    text-align: center;
-    font-size: 2rem;
+.form-wrapper {
+  color: grey;
+  width: 350px;
+  height: auto;
+  padding:20px;
+  background-color: white;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
-.form-wrapper .input-box{
-    position: relative;
-    width: 100%;
-    height: 30px;
-    margin: 20px 0;
+.form-wrapper h4 {
+  text-align: center;
+  font-size: 2rem;
 }
 
-.input-box input{
-    width: 100%;
-    height: 100%;
-    border: none;
-    padding-left: 20px;
-    outline: none;
-    border-bottom: 1px solid grey;
+.form-wrapper .logo {
+  text-align: center;
 }
 
-.input-box .icon{
-    position: absolute;
-    left: 0;
-    top:5px;
-    font-size: 16px;
+.form-wrapper .input-box {
+  position: relative;
+  width: 100%;
+  height: 30px;
+  margin: 20px 0;
 }
+
+.input-box input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding-left: 20px;
+  outline: none;
+  border-bottom: 1px solid grey;
+}
+
+.input-box input:focus {
+  border-color: rgb(58, 160, 129);
+}
+
+.input-box .icon {
+  position: absolute;
+  left: 0;
+  top: 5px;
+  font-size: 16px;
+  color: rgb(58, 160, 129);
+}
+
 .btn-lgn {
-    width: 100%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
-.btn-lgn .btn{
-    border:none;
-    background-color:white;
-    text-align: center;
-    width:100px;
-    height: 30px;
-    border-radius: 40px;
-    border: 1px solid grey;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 1rem;
-    color:grey;
+.btn-lgn .btn {
+  border: none;
+  background-color: white;
+  text-align: center;
+  width: 115px;
+  height: 40px;
+  border-radius: 40px;
+  border: 1px solid grey;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1rem;
+  color: grey;
 }
 
-.btn-lgn .btn:hover{
-    background-color:grey;
-    color: white;
+.btn-lgn .btn:hover {
+  background-color: rgb(58, 160, 129);
+  color: white;
 }
 
+a {
+  text-decoration: none;
+  font-size: 0.8rem;
+  display: flex;
+  justify-content: center;
+  margin: 10px 0;
+  color: gray;
+}
 
-a{
-    text-decoration: none;
-    font-size: 0.8rem;
-    display: flex;
-    justify-content: center;
-    margin: 10px 0;
-    color:gray
+.error-success {
+  font-size: 12px;
+  color: rgb(58, 160, 129);
+}
+
+.error-msg {
+  font-size: 12px;
+  color: red;
 }
